--- a/style.css
+++ b/style.css
@@ -1592,6 +1592,7 @@ body.dark-mode {
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
     border-radius: 8px;
     padding: 10px;
+    z-index: 1000;
   }
 
   #headerMenu button {
@@ -1614,6 +1615,12 @@ body.dark-mode {
   body.rtl {
     #headerMenu {
       left: 10px;
+      right: auto;
     }
+    .lang-dropdown-content {
+      right: auto;
+      left: 0;
+    }
+  
   }
 }
